# ai-infra-templates

./: .gitignore  README.md
.github/workflows/: agent-core-tests.yml  agent-evals-tests.yml  platform-core-tests.yml  retrieval-core-tests.yml  secret-scan.yml
action/: action.yml  gitleaks-baseline.toml  post_comment.py  review.py
agent-core/: CHANGELOG.md  README.md  pyproject.toml
agent-core/src/agent_core/: __init__.py  auth.py  loop.py  mcp_client.py  skills.py  telemetry.py  tracing.py
agent-core/tests/: test_agent_core.py  test_loop.py
agent-evals/: README.md  pyproject.toml
agent-evals/src/agent_evals/: __init__.py  deterministic.py  judge.py  report.py  trace.py
agent-evals/src/agent_evals/adapters/: __init__.py  braintrust.py  langfuse.py
agent-evals/src/agent_evals/cli/: __init__.py  compare.py  score.py
agent-evals/tests/: test_adapters.py  test_deterministic.py  test_judge.py  test_report.py  test_trace.py
agent-evals/tests/fixtures/: valid_boundary_refusal.jsonl  valid_same_tool_twice.jsonl  valid_two_tool_chain.jsonl
docs/: design.md
llm-provider/: CHANGELOG.md  README.md  pyproject.toml
llm-provider/src/llm_provider/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  types.py
llm-provider/tests/: test_factory.py  test_stream.py  test_swap.py  test_translation.py  test_types.py
platform-core/: README.md  pyproject.toml
platform-core/src/platform_core/: __init__.py  queue.py
platform-core/tests/: test_queue.py
retrieval-core/: CHANGELOG.md  README.md  pyproject.toml
retrieval-core/src/retrieval_core/: __init__.py  assembly.py  config.py  fusion.py  pg.py  rerank.py  retrieval.py  types.py
retrieval-core/tests/: test_assembly.py  test_fusion.py  test_pg.py  test_rerank.py  test_retrieval.py
skills/enterprise-security/: SKILL.md
