[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.1.2"
description = "Reusable agent runtime: bounded plan/act/observe loop, MCP tool dispatch, Auth0 M2M, JSONL+OTel tracing, skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michaela Links" },
]
keywords = ["agent", "mcp", "anthropic", "llm", "tracing", "otel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

# The agent runtime is the package's purpose, so its core deps are non-optional.
dependencies = [
    "anthropic>=0.40",
    "mcp>=1.27.1",
    "httpx>=0.28.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/claudeaiportfolio/ai-infra-templates"
Issues = "https://github.com/claudeaiportfolio/ai-infra-templates/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# The loop dispatches on Anthropic content blocks (a ~12-way union) via runtime
# `block.type` checks, which mypy can't narrow — the access is correct at runtime.
disable_error_code = ["union-attr"]
