[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.2.1"
description = "Reusable agent runtime: bounded plan/act/observe loop, MCP tool dispatch, Auth0 M2M, JSONL+OTel tracing, skills"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michaela Links" },
]
keywords = ["agent", "mcp", "anthropic", "llm", "tracing", "otel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

# The agent runtime is the package's purpose, so its core deps are non-optional.
dependencies = [
    # The provider seam the loop routes through. Pinned to the git-subdirectory
    # tag (cut by a human post-merge), mirroring the agent-evals dependency
    # style. anthropic comes in transitively via llm-provider, but is kept
    # explicit because the loop constructs an AsyncAnthropic client directly to
    # preserve the injected-API-key path.
    "llm-provider @ git+https://github.com/claudeaiportfolio/ai-infra-templates.git@llm-provider-v0.2.1#subdirectory=llm-provider",
    "anthropic>=0.40",
    "mcp>=1.27.1",
    "httpx>=0.28.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/claudeaiportfolio/ai-infra-templates"
Issues = "https://github.com/claudeaiportfolio/ai-infra-templates/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

# Required so the git-subdirectory llm-provider URL is allowed in published
# metadata. External consumers (pip) resolve llm-provider from its tag via this
# direct reference.
[tool.hatch.metadata]
allow-direct-references = true

# Dev/CI only: resolve llm-provider from the local monorepo sibling instead of
# the git tag, so tests pass before the human cuts `llm-provider-v0.2.0`. uv
# `sources` are honoured only when developing *this* project — they are NOT
# part of the published metadata, so a consumer installing agent-core by tag
# still resolves llm-provider from the git ref in [project.dependencies].
[tool.uv.sources]
llm-provider = { path = "../llm-provider", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# auth.py accesses a cached-token field after a freshness check that mypy can't
# tie to the Optional narrowing; the access is correct at runtime. (The loop no
# longer dispatches on raw SDK unions — it goes through llm-provider's neutral
# types — but this stays to cover the auth path.)
disable_error_code = ["union-attr"]
