[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-core"
version = "0.1.0"
description = "Shared infra plumbing for portfolio services (queue/Redis today; db/llm/otel later)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Michaela Links" },
]
keywords = ["redis", "rq", "queue", "platform", "infra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

# Core is dependency-light; each capability ships as an optional extra so
# consumers only pull what they use (the agent-evals precedent).
dependencies = []

[project.optional-dependencies]
queue = ["redis>=5.0", "rq>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "redis>=5.0",
    "rq>=2.0",
]

[project.urls]
Repository = "https://github.com/claudeaiportfolio/ai-infra-templates"
Issues = "https://github.com/claudeaiportfolio/ai-infra-templates/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/platform_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
